# workout-mcp

./: README.md  pyproject.toml
data/: back_health.md  pantry.json  sleep_log.md  strava_cache.json  training_program.md
src/: config.py  health.py  notes.py  nutrition.py  server.py  sleep.py  strava.py  training.py
